--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>Carlav</title>
+  <title>carlaVignale</title>
+
   <base href="/">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Favicon personalizado -->
+  <link rel="icon" type="image/png" href="assets/img/logo.png">
 </head>
 <body>
   <app-root></app-root>
